# sintax_rs

./: .gitignore  Cargo.toml  Makefile  README.md  parse_sintax_tsv.py  release.py
.github/workflows/: ci.yaml  dev.yaml
src/: args.rs  classifier.rs  errors.rs  index.rs  kmers.rs  main.rs  serialization.rs  sintax.rs  utils.rs
src/database/: build_database.rs  index.rs  kmer_bitset.rs  mod.rs
src/sintax/: index.rs  kmer_bitset.rs  kmers.rs  mod.rs  sintax.rs
