[package]
name = "sintax_rs"
version = "0.0.1"
edition = "2024"

[dependencies]
rayon = { version = "1.10.0" }
rstest = { version = "0.26.1" }
clap = { version = "4.5.53", features = ["derive"] }
log = { version = "0.4.29" }
simple_logger = { version = "5.0.0" }
bio = { version = "3.0.0" }
flate2 = { version = "1.1.1" }
rand = { version = "0.9.2" }
fixedbitset = { version = "0.5.7" }
dashmap = { version = "6.1.0" }
samply = { version = "0.13.1" }
rustc-hash = { version = "2.1.1" }
indicatif = { version = "0.18.3" }
thiserror = { version = "2.0.17" }
anyhow = { version = "1.0.99" }
