[package]
name = "sintax_rs"
version = "0.0.2"
edition = "2024"

[dependencies]
rayon = { version = "1.11.0" }
rstest = { version = "0.26.1" }
clap = { version = "4.5.54", features = ["derive"] }
log = { version = "0.4.29" }
simple_logger = { version = "5.0.0" }
needletail = { version = "0.6.3", features = ["compression"]}
hashbrown = { version = "0.15" }
rand = { version = "0.9.2" }
fixedbitset = { version = "0.5.7" }
dashmap = { version = "6.1.0" }
rustc-hash = { version = "2.1.1" }
simd-minimizers = { version = "2.0.1" }
packed-seq = "4.2.0"
indicatif = { version = "0.18.3" }
thiserror = { version = "2.0.18" }
