[package]
name = "sintax_rs"
version = "0.0.2"
edition = "2024"

[dependencies]
rayon = { version = "1.11.0" }
rstest = { version = "0.26.1" }
clap = { version = "4.6.0", features = ["derive"] }
log = { version = "0.4.29" }
simple_logger = { version = "5.1.0" }
bio = { version = "4.0.0" }
flate2 = { version = "1.1.5" }
rand = { version = "0.10.0" }
fixedbitset = { version = "0.5.7" }
dashmap = { version = "6.2.1" }
rustc-hash = { version = "2.1.2" }
simd-minimizers = { version = "2.0.1" }
packed-seq = "4.2.0"
indicatif = { version = "0.18.3" }
thiserror = { version = "2.0.18" }
